# weston

./: .gitlab-ci.yml  Makefile.am  TODO  meson_options.txt
clients/: gears.c  keyboard.c  meson.build  window.c  window.h
compositor/: cms-helper.c  main.c  meson.build  text-backend.c  xwayland.c
desktop-shell/: input-panel.c  meson.build
include/libweston/: backend-vnc.h  libweston.h  meson.build
libweston/: compositor.c  meson.build  timeline.c  vaapi-recorder.c
libweston-desktop/: libweston-desktop.c
libweston/backend-vnc/: meson.build  vnc.c
libweston/renderer-gl/: gl-renderer.c
protocol/: meson.build  weston-input-panel.xml
src/: log.c
tests/: meson.build  text-test.c
tools/zunitc/src/: zuc_base_logger.c  zuc_collector.c  zuc_junit_reporter.c
